# covid-NDD-image-based-information-extraction

./: .gitignore  .pdm-python  Dockerfile  Dockerfile.rtf  README.md  environment.yml  output_with_doi.xlsx  pyproject.toml  requirements.txt  url_2_doi.py
config/: config.ini
data/: Supplementary_material_S3_Table.xlsx
data/CBM_data/: Data_CBM.xlsx  Data_CBM_with_GitHub_URLs.xlsx  (+2 more)
notebooks/: Hyperparameters_and_prompts_assessment.ipynb  MeSH_Keyword_Extraction.ipynb  Triple_Extraction_GPT4o.ipynb  gpt4o-correct-neo4j-labels-nodes.ipynb  test.ipynb  triple_per_mechanism_all_sources.csv
output/: 10.3390-cells11081298.txt  FINAL_RELEVANT_URLs.xlsx  covid_neurodegeneration_triples.csv  covid_neurodegeneration_triples_with_pmids.csv
queries/: causal_paths.cypher  connectivity.cypher  covid_vs_neuro.cypher  hubs_and_centrality.cypher  overlaps_and_uniques.cypher  projection_and_communities.cypher.rtf  schema.cypher.rtf  statistics.cypher  therapeutics.cypher.rtf
src/: GPT4o_uncategorized_handling.py  Gold_Standard_Comparison_BioBERT.py  Hyperparameter_Assessment.py  Hyperparameters_and_Prompt_Assessment.py  Image_Enrichment_Analysis.py  Prompt_Assessment.py  Threshold_Selection_BioBERT.py  Triple_Extraction_FullText.py  Triple_Extraction_GPT4o.py  Triples_Categorization.py  URL_subset_selector.py  URLs_Relevance_Check.py  bio_insights.py  create_manifest.py  entity_linking_embedding_advanced.py  gpt4o-correct-neo4j-labels-nodes.py  image_baseline.py  mesh_category_extraction.py  neo4j_load.py  neo4j_upload.py  neo4j_upload_fulltext.py  review_labels_neo4j.py
(+75 files in other folders)
