[project]
name = "image-based-information-extraction-LLM-main"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Elizaveta Popova", email = "elizaveta.popova@uni-bonn.de"},
]
dependencies = [
    "pandas>=2.2.3",
    "numpy>=2.2.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
